# Pacs_challenges

challenge1/: CMakeLists.txt  CN_solver  Makefile  Makefile_muparser  ODEsolver.cpp  ODEsolver.h  ODEsolver.hpp  README.MD  autorun.sh  convergence_rate.txt  data.txt  data.txt.bak  main  main.cpp  main_getpot_muparser.cpp  muparser_fun.hpp  muparser_sol.hpp  output.txt  visualize.m  visualize.py
challenge1/Muparser_version/: CMakeLists.txt  Makefile  ODEsolver.cpp  ODEsolver.hpp  main_getpot_muparser.cpp  muparser_fun.hpp  muparser_sol.hpp  visualize.py
challenge1/pacs1_ila/: BackwardEuler.cpp  BackwardEuler.hpp  Makefile  basicZeroFun.hpp  main  main.cpp
challenge2/: BaseSolver.h  Bisection.cpp  Bisection.h  BrentSearch.h  CMakeLists.txt  Makefile  Newton.h  QuasiNewton.h  Regulafalsi.cpp  Regulafalsi.h  Secant.cpp  Secant.h  SolverFactory.h  Solver_Utilities.h  Traits.h  data.txt  main.cpp  muparser_fun.hpp  readme.md
challenge2/getpot_muparser/: CMakeLists.txt  Makefile  QuasiNewton.h  RegulaFalsi.h  TypeTraits.h  main  main.cpp  muparser_fun.hpp  readme.md
challenge2/ilaria/: Bisection.cpp  Bisection.hpp  Brent.cpp  Brent.hpp  QuasiNewton.cpp  QuasiNewton.hpp  README.md  Secant.cpp  Secant.hpp  SolverBase.cpp  SolverBase.hpp  SolverFactory.cpp  SolverFactory.hpp  SolverParams.cpp  SolverParams.hpp  SolverTraits.hpp  data  main.cpp
challenge2/prova_templates/: BaseSolver.h  Bisection.h  CMakeLists.txt  SolverFactory.h  TypeTraits.h  main.cpp
challenge2/singleton_bracket_interval/: BaseSolver.h  Bisection.h  BrentSearch.h  CMakeLists.txt  Makefile  Newton.h  (+10 more)
(+11 files in other folders)
